# kakuhen

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CompilerWarnings.cmake  FindSphinx.cmake  kakuhenConfig.cmake.in
docs/: Doxyfile.in
docs/sphinx/: conf.py.in  example_quickstart.cpp  index.rst
docs/sphinx/api/: arrays.rst  histograms.rst  index.rst  integrators.rst  utilities.rst
docs/sphinx/guides/: building_docs.rst  histograms.rst  index.rst  installation.rst  progress.rst  quickstart.rst
examples/: CMakeLists.txt  example.cpp  example_benchmark.cpp  example_functor.cpp  example_generator.cpp  example_histogram.cpp  example_live_progress.cpp
include/kakuhen/: kakuhen.h
include/kakuhen/histogram/: axis.h  axis_data.h  axis_id.h  axis_view.h  bin_accumulator.h  bin_range.h  histogram_buffer.h  histogram_data.h  histogram_id.h  histogram_registry.h  histogram_view.h  histogram_writer.h
include/kakuhen/integrator/: basin.h  detail.h  generator_base.h  grid_accumulator.h  integral_accumulator.h  integrator_base.h  integrator_feature.h  numeric_traits.h  options.h  plain.h  point.h  progress.h  result.h  vegas.h  vegas_generator.h
include/kakuhen/ndarray/: detail.h  ndarray.h  ndview.h  slice.h
include/kakuhen/util/: accumulator.h  algorithm.h  hash.h  math.h  numeric_traits.h  printer.h  progress_bar.h  scope_exit.h  serialize.h  small_vector.h  type.h  user_data.h
tests/: CMakeLists.txt  test_accumulator.cpp  test_algorithm.cpp  test_axis.cpp  test_basin.cpp  test_coverage_misc.cpp  test_hash.cpp  test_histogram.cpp  test_histogram_registry.cpp  test_histogram_serialize.cpp  test_histogram_view.cpp  test_histogram_writer.cpp  test_map_point.cpp  test_math.cpp  test_ndarray.cpp  test_printer.cpp  test_progress_callback.cpp  test_result.cpp  test_serialize.cpp  test_small_vector.cpp  test_user_data.cpp  test_vegas.cpp
tools/: CMakeLists.txt  gnuplot.h  kakuhen_cli.cpp
tools/plot/: gnuplot.h
